线下聊天demo 支持发送微信emoji、录音及播放、拍照或图片

--- a/src/css/qq.less
+++ b/src/css/qq.less
@@ -78,457 +78,457 @@
     left: -256px;
     clip-path: circle(16px at 266px 48px);
   }
+  .qqface16 {
+    top: -74px;
+    // clip-path: circle(16px at 12px 48px);
+  }
   .qqface17 {
     top: -74px;
-    clip-path: circle(16px at 12px 84px);
+    left: -36px;
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface18 {
     top: -74px;
-    left: -36px;
-    clip-path: circle(16px at 48px 84px);
+    left: -72px;
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface19 {
     top: -74px;
-    left: -72px;
-    clip-path: circle(16px at 84px 84px);
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface20 {
     top: -74px;
-    left: -109px;
-    clip-path: circle(16px at 120px 84px);
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface21 {
     top: -74px;
-    left: -145px;
-    clip-path: circle(16px at 158px 84px);
+    left: -182px;
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface22 {
     top: -74px;
-    left: -182px;
-    clip-path: circle(16px at 194px 84px);
+    left: -219px;
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface23 {
     top: -74px;
-    left: -219px;
-    clip-path: circle(16px at 230px 84px);
+    left: -256px;
+    // clip-path: circle(16px at 266px 48px);
+  }
+  .qqface24 {
+    top: -110px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface25 {
-    top: -74px;
-    left: -256px;
-    clip-path: circle(16px at 266px 84px);
+    top: -110px;
+    left: -36px;
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface26 {
     top: -110px;
-    clip-path: circle(16px at 12px 121px);
+    left: -72px;
+    // clip-path: circle(16px at 84px 48px);
+  }
+  .qqface27 {
+    top: -110px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface28 {
     top: -110px;
-    left: -36px;
-    clip-path: circle(16px at 48px 121px);
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface29 {
     top: -110px;
-    left: -72px;
-    clip-path: circle(16px at 84px 121px);
+    left: -182px;
+    // clip-path: circle(16px at 194px 48px);
+  }
+  .qqface30 {
+    top: -110px;
+    left: -219px;
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface31 {
     top: -110px;
-    left: -110px;
-    clip-path: circle(16px at 120px 121px);
+    left: -256px;
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface32 {
-    top: -110px;
-    left: -146px;
-    clip-path: circle(16px at 158px 121px);
+    top: -148px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface33 {
-    top: -110px;
-    left: -182px;
-    clip-path: circle(16px at 194px 121px);
+    top: -148px;
+    left: -36px;
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface34 {
-    top: -110px;
-    left: -219px;
-    clip-path: circle(16px at 230px 121px);
+    top: -148px;
+    left: -72px;
+    // clip-path: circle(16px at 84px 48px);
+  }
+  .qqface35 {
+    top: -148px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface36 {
-    top: -110px;
-    left: -256px;
-    clip-path: circle(16px at 266px 121px);
+    top: -148px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface37 {
-    top: -147px;
-    clip-path: circle(16px at 12px 157px);
+    top: -148px;
+    left: -182px;
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface38 {
-    top: -147px;
-    left: -36px;
-    clip-path: circle(16px at 48px 157px);
+    top: -148px;
+    left: -219px;
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface39 {
-    top: -147px;
-    left: -73px;
-    clip-path: circle(16px at 85px 160px);
+    top: -148px;
+    left: -256px;
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface40 {
-    top: -147px;
-    left: -109px;
-    clip-path: circle(16px at 120px 157px);
+    top: -184px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface41 {
-    top: -147px;
-    left: -145px;
-    clip-path: circle(16px at 158px 157px);
-  }
-  .qqface42 {
-    top: -147px;
-    left: -183px;
-    clip-path: circle(16px at 194px 157px);
-  }
-  .qqface44 {
-    top: -147px;
-    left: -219px;
-    clip-path: circle(16px at 230px 157px);
-  }
-  .qqface46 {
-    top: -147px;
-    left: -256px;
-    clip-path: circle(16px at 266px 157px);
-  }
-  .qqface48 {
-    top: -184px;
-    clip-path: circle(16px at 12px 196px);
-  }
-  .qqface49 {
     top: -184px;
     left: -36px;
-    clip-path: circle(16px at 48px 196px);
+    // clip-path: circle(16px at 48px 48px);
   }
-  .qqface50 {
+  .qqface42 {
     top: -184px;
-    left: -72px;
-    clip-path: circle(16px at 84px 196px);
+    left: -74px;
+    // clip-path: circle(16px at 84px 48px);
   }
-  .qqface51 {
+  .qqface43 {
     top: -184px;
-    left: -109px;
-    clip-path: circle(16px at 120px 196px);
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
-  .qqface52 {
+  .qqface44 {
     top: -184px;
-    left: -145px;
-    clip-path: circle(16px at 158px 196px);
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
-  .qqface54 {
+  .qqface45 {
     top: -184px;
     left: -182px;
-    clip-path: circle(16px at 194px 196px);
+    // clip-path: circle(16px at 194px 48px);
   }
-  .qqface53 {
+  .qqface46 {
     top: -184px;
     left: -219px;
-    clip-path: circle(16px at 230px 196px);
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface47 {
     top: -184px;
     left: -256px;
-    clip-path: circle(16px at 266px 198px);
+    // clip-path: circle(16px at 266px 48px);
   }
-  .qqface35 {
-    top: -222px;
-    clip-path: circle(16px at 12px 234px);
+  .qqface48 {
+    top: -221px;
+    // clip-path: circle(16px at 12px 48px);
   }
-  .qqface16 {
-    top: -222px;
+  .qqface49 {
+    top: -221px;
     left: -36px;
-    clip-path: circle(16px at 48px 234px);
+    // clip-path: circle(16px at 48px 48px);
   }
-  .qqface45 {
-    top: -222px;
+  .qqface50 {
+    top: -221px;
     left: -72px;
-    clip-path: circle(16px at 84px 234px);
+    // clip-path: circle(16px at 84px 48px);
   }
-  .qqface24 {
-    top: -222px;
-    left: -109px;
-    clip-path: circle(16px at 120px 234px);
+  .qqface51 {
+    top: -221px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
-  .qqface27 {
-    top: -222px;
-    left: -145px;
-    clip-path: circle(16px at 158px 234px);
+  .qqface52 {
+    top: -221px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
-  .qqface30 {
-    top: -222px;
+  .qqface53 {
+    top: -221px;
     left: -182px;
-    clip-path: circle(16px at 194px 234px);
+    // clip-path: circle(16px at 194px 48px);
   }
-  .qqface43 {
-    top: -222px;
+  .qqface54 {
+    top: -221px;
     left: -219px;
-    clip-path: circle(16px at 230px 234px);
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface55 {
-    top: -222px;
+    top: -221px;
     left: -256px;
-    clip-path: circle(16px at 266px 234px);
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface56 {
-    top: -258px;
-    clip-path: circle(16px at 12px 270px);
+    top: -257px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface57 {
-    top: -258px;
+    top: -257px;
     left: -36px;
-    clip-path: circle(16px at 48px 270px);
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface58 {
-    top: -258px;
+    top: -257px;
     left: -72px;
-    clip-path: circle(16px at 84px 270px);
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface59 {
-    top: -258px;
-    left: -109px;
-    clip-path: circle(16px at 120px 270px);
+    top: -257px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface60 {
-    top: -258px;
-    left: -145px;
-    clip-path: circle(16px at 158px 270px);
+    top: -257px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface61 {
-    top: -258px;
+    top: -257px;
     left: -182px;
-    clip-path: circle(16px at 194px 270px);
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface62 {
-    top: -258px;
+    top: -257px;
     left: -219px;
-    clip-path: circle(16px at 230px 270px);
-  }
-  .qqface74 {
-    top: -258px;
-    left: -256px;
-    clip-path: circle(16px at 266px 270px);
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface63 {
-    top: -294px;
-    clip-path: circle(16px at 12px 306px);
+    top: -257px;
+    left: -256px;
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface64 {
-    top: -294px;
-    left: -36px;
-    clip-path: circle(16px at 48px 306px);
+    top: -293px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface65 {
-    top: -294px;
-    left: -72px;
-    clip-path: circle(16px at 84px 306px);
+    top: -293px;
+    left: -36px;
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface66 {
-    top: -294px;
-    left: -109px;
-    clip-path: circle(16px at 120px 306px);
+    top: -293px;
+    left: -72px;
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface67 {
-    top: -294px;
-    left: -145px;
-    clip-path: circle(16px at 158px 306px);
+    top: -293px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface68 {
-    top: -294px;
-    left: -182px;
-    clip-path: circle(16px at 194px 306px);
+    top: -293px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface69 {
-    top: -294px;
-    left: -219px;
-    clip-path: circle(16px at 230px 306px);
+    top: -293px;
+    left: -182px;
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface70 {
-    top: -294px;
-    left: -256px;
-    clip-path: circle(16px at 266px 306px);
+    top: -293px;
+    left: -219px;
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface71 {
-    top: -330px;
-    clip-path: circle(16px at 12px 342px);
+    top: -293px;
+    left: -256px;
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface72 {
-    top: -330px;
-    left: -36px;
-    clip-path: circle(16px at 48px 342px);
+    top: -329px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface73 {
-    top: -330px;
-    left: -73px;
-    clip-path: circle(16px at 84px 342px);
+    top: -329px;
+    left: -36px;
+    // clip-path: circle(16px at 48px 48px);
+  }
+  .qqface74 {
+    top: -329px;
+    left: -72px;
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface75 {
-    top: -330px;
-    left: -109px;
-    clip-path: circle(16px at 120px 342px);
+    top: -329px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface76 {
-    top: -330px;
-    left: -145px;
-    clip-path: circle(16px at 158px 342px);
+    top: -329px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
   .qqface77 {
-    top: -330px;
+    top: -329px;
     left: -182px;
-    clip-path: circle(16px at 194px 342px);
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface78 {
-    top: -330px;
+    top: -329px;
     left: -219px;
-    clip-path: circle(16px at 230px 342px);
+    // clip-path: circle(16px at 230px 48px);
   }
   .qqface79 {
-    top: -330px;
+    top: -329px;
     left: -256px;
-    clip-path: circle(16px at 266px 342px);
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface80 {
     top: -366px;
-    clip-path: circle(16px at 12px 378px);
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface81 {
     top: -366px;
     left: -36px;
-    clip-path: circle(16px at 48px 378px);
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface82 {
     top: -366px;
     left: -72px;
-    clip-path: circle(16px at 84px 378px);
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface83 {
     top: -366px;
-    left: -109px;
-    clip-path: circle(16px at 120px 378px);
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface84 {
     top: -366px;
-    left: -145px;
-    clip-path: circle(16px at 158px 378px);
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
-  .qqface85 {
+  .qqface85{
     top: -366px;
     left: -182px;
-    clip-path: circle(16px at 194px 378px);
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface86 {
     top: -366px;
     left: -219px;
-    clip-path: circle(16px at 230px 378px);
+    // clip-path: circle(16px at 230px 48px);
   }
-  .qqface87 {
+  .qqface87{
     top: -366px;
     left: -256px;
-    clip-path: circle(16px at 266px 378px);
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface88 {
     top: -404px;
-    clip-path: circle(16px at 12px 416px);
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface89 {
     top: -404px;
     left: -36px;
-    clip-path: circle(16px at 48px 416px);
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface90 {
     top: -404px;
     left: -72px;
-    clip-path: circle(16px at 84px 416px);
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface91 {
     top: -404px;
-    left: -109px;
-    clip-path: circle(16px at 120px 416px);
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface92 {
     top: -404px;
-    left: -145px;
-    clip-path: circle(16px at 158px 416px);
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
-  .qqface93 {
+  .qqface93{
     top: -404px;
     left: -182px;
-    clip-path: circle(16px at 194px 416px);
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface94 {
     top: -404px;
     left: -219px;
-    clip-path: circle(16px at 230px 416px);
+    // clip-path: circle(16px at 230px 48px);
   }
-  .qqface95 {
+  .qqface95{
     top: -404px;
     left: -256px;
-    clip-path: circle(16px at 267px 416px);
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface96 {
-    top: -441px;
-    clip-path: circle(16px at 12px 452px);
+    top: -440px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface97 {
-    top: -441px;
+    top: -440px;
     left: -36px;
-    clip-path: circle(16px at 48px 452px);
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface98 {
-    top: -441px;
+    top: -440px;
     left: -72px;
-    clip-path: circle(16px at 84px 452px);
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface99 {
-    top: -441px;
-    left: -109px;
-    clip-path: circle(16px at 120px 452px);
+    top: -440px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface100 {
-    top: -441px;
-    left: -145px;
-    clip-path: circle(16px at 158px 452px);
+    top: -440px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
-  .qqface101 {
-    top: -441px;
+  .qqface101{
+    top: -440px;
     left: -182px;
-    clip-path: circle(16px at 194px 452px);
+    // clip-path: circle(16px at 194px 48px);
   }
   .qqface102 {
-    top: -441px;
+    top: -440px;
     left: -219px;
-    clip-path: circle(16px at 230px 452px);
+    // clip-path: circle(16px at 230px 48px);
   }
-  .qqface103 {
-    top: -441px;
+  .qqface103{
+    top: -440px;
     left: -256px;
-    clip-path: circle(16px at 266px 452px);
+    // clip-path: circle(16px at 266px 48px);
   }
   .qqface104 {
-    top: -477px;
-    clip-path: circle(16px at 12px 489px);
+    top: -478px;
+    // clip-path: circle(16px at 12px 48px);
   }
   .qqface105 {
-    top: -477px;
+    top: -478px;
     left: -36px;
-    clip-path: circle(16px at 48px 489px);
+    // clip-path: circle(16px at 48px 48px);
   }
   .qqface106 {
-    top: -477px;
+    top: -478px;
     left: -72px;
-    clip-path: circle(16px at 84px 489px);
+    // clip-path: circle(16px at 84px 48px);
   }
   .qqface107 {
-    top: -477px;
-    left: -109px;
-    clip-path: circle(16px at 120px 489px);
+    top: -478px;
+    left: -110px;
+    // clip-path: circle(16px at 120px 48px);
   }
   .qqface108 {
-    top: -477px;
-    left: -145px;
-    clip-path: circle(16px at 158px 489px);
+    top: -478px;
+    left: -146px;
+    // clip-path: circle(16px at 158px 48px);
   }
 }
